# santoadji21-data-engineer-journey

./: .gitignore  Makefile  QUICKSTART.md  README.md
.cursor/guru/: SKILL.md
docs/: COMMANDS.md  README.md  resources.md
docs/architecture/: data-model.md
docs/learning-notes/: data-engineering-lifecycle.md  duckdb-tips.md  hotel-metrics.md  hotel-source-systems.md
environment/: Dockerfile  docker-compose.yml  requirements.txt
plans/: Phase1_The_Pivot.md  Phase2_The_Infrastructure.md  Phase3_The_Orchestrator.md  Phase4_The_Portfolio.md  tech.md
plans/de-7/: 01_Intro_to_Data_Engineering.md  02_Ingestion_and_Storage.md  03_Data_Processing_SQL.md  04_Big_Data_Medallion.md  05_Pipelines_NiFi_ETL.md  06_Real_Time_Processing.md  08_Capstone_Project.md  (+1 more)
projects/hotel-dashboard/apps/backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
projects/hotel-dashboard/apps/backend/app/: main.py
projects/hotel-dashboard/apps/backend/app/core/: config.py  database.py
projects/hotel-dashboard/apps/backend/app/models/: schemas.py
projects/hotel-dashboard/apps/backend/app/routers/: dashboard.py
projects/hotel-dashboard/apps/backend/app/services/: dashboard_service.py
projects/hotel-dashboard/apps/backend/bruno/dashboard/: get-hotel-city-budget-inn.bru  get-hotel-grand-budapest.bru  get-hotel-not-found.bru  get-hotel-seaside-resort.bru  get-summary.bru  get-trends-by-hotel.bru  get-trends.bru
projects/hotel-dashboard/apps/backend/bruno/health/: health-check.bru
projects/hotel-dashboard/apps/backend/scripts/: seed_data.py
scripts/: run-phase1.sh  setup.sh
(+103 files in other folders)
